--- a/ml_git.vcxproj.filters
+++ b/ml_git.vcxproj.filters
@@ -18,9 +18,6 @@
     <Filter Include="Header Files\include">
       <UniqueIdentifier>{649344db-c5b9-48c6-898c-bc673ed1d2c7}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\vendor">
-      <UniqueIdentifier>{8a074fe1-566b-4967-9415-22d0bd2a7ad4}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CFunctions.cpp">
@@ -33,6 +30,9 @@
       <Filter>Source Files\extra</Filter>
     </ClCompile>
     <ClCompile Include="ml_git.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LuaVM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -52,19 +52,10 @@
     <ClInclude Include="include\ILuaModuleManager.h">
       <Filter>Header Files\include</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\vendor\lua\src\lauxlib.h">
-      <Filter>Header Files\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\vendor\lua\src\lua.h">
-      <Filter>Header Files\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\vendor\lua\src\luaconf.h">
-      <Filter>Header Files\include</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\vendor\lua\src\lualib.h">
-      <Filter>Header Files\include</Filter>
-    </ClInclude>
     <ClInclude Include="ml_git.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LuaVM.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
